# GameConsole

./: .gitignore  CMakeLists.txt  input.pio  main.c  readme.md
examples/: CMakeLists.txt  input.c  input.h  lcd_test.c  random.c  random.h  tetris.c  tetris.h
lib/config/: DEV_Config.c
lib/fatfs/: fatfs_storage.c
lib/font/: font.py  font48.c  fonts.h
lib/lcd/: LCD_Bmp.c
pio/: CMakeLists.txt  build_pio.sh  input.pio
sd/: CMakeLists.txt
